Fix javadoc for java 17